[workspace]
members = ["types", "api", "executor", "macros"]
resolver = "2"

[workspace.dependencies]
borsh = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.11"
derive_more = "0.99"
bs58 = "0.4"
thiserror = "1.0"
near-account-id = "1.0.0"
near-gas = { version = "0.3", features = ["serde", "borsh"] }
near-token = { version = "0.3", features = ["serde", "borsh"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
futures = "0.3"
openssl = { version = "0.10", features = ["vendored"] }
bip39 = { version = "2.0.0", features = ["rand"] }
ed25519-dalek = { version = "2", default-features = false }
serde_json = "1.0.57"
slipped10 = { version = "0.4.6" }
url = { version = "2", features = ["serde"] }
tokio = { version = "1.0", default-features = false, features = ["time"] }
tracing = "0.1"
near-ledger = "0.8.1"
near-primitives = "0.27"
near-jsonrpc-client = "0.14"
near-jsonrpc-primitives = "0.27"
near-crypto = "0.27.0"
near-sdk = "5.6"
near-abi = "0.4.2"
zstd = "0.13"
keyring = { version = "3.2", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
    "vendored",
] }
near-workspaces = { version = "0.15.0" }


near-types = { path = "types" }
executor = { path = "executor" }
macros = { path = "macros" }
